--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/11/17</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in shipwreck in the Mediterranean Sea</b><br>Source: IOM/MSF/Proactiva/UNHCR<br>
+Found dead: <b>26/02/05</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men, ±24)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>died at hospital in Oran (DZ) after boat was found drifting off coast of Tunisia</b><br>Source: AFVIC/ATMF/NOB<br>
 
 <br>
 
