--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/02/05</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men, ±24)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>died at hospital in Oran (DZ) after boat was found drifting off coast of Tunisia</b><br>Source: AFVIC/ATMF/NOB<br>
+Found dead: <b>20/12/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Jordan, Iraq, Iran, Afghanist</b><br>Cause of death: <b>reportedly drowned after boat sank off coast of Turkey on way to Greece</b><br>Source: MNS/NI/AP/SP/Kurier/Vielfaltletter/BBC/MUGAK<br>
 
 <br>
 
