--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Feb 95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zinaida Mitzofanova (woman, 63)</b><br>Region of origin: <b>Latvia</b><br>Cause of death: <b>suicide, in County Durham (GB) out of fear of deportation</b><br>Source: Independent/NCRM/IRR<br>
+Found dead: <b>20/11/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±20)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>hit by car on A16 highway in Grande-Synthe near Calais (FR)</b><br>Source: VoixDuNord<br>
 
 <br>
 
