--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/11/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±20)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>hit by car on A16 highway in Grande-Synthe near Calais (FR)</b><br>Source: VoixDuNord<br>
+Found dead: <b>20/08/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nassur Said Mhadji "DJ Silva" (man)</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>missing after boat sank on way from Anjouan (KM) to Mayotte (FR)</b><br>Source: HabComores<br>
 
 <br>
 
