--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/05/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shiraz Pir (man, 25)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>suicide, hanged himself in Bristol (GB) after asylum claim was rejected</b><br>Source: NCADC/CARF/IRR/ERB/BBC<br>
+Found dead: <b>07/04/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kandan Ravi (boy, 12)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>disappeared in suspicious circumstances after being released from detention centre in Berlin (DE)</b><br>Source: ARI<br>
 
 <br>
 
