--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/12/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman, 39)</b><br>Region of origin: <b>Ukraine</b><br>Cause of death: <b>died of hypothermia in Avellino (IT) while being kept as slave in bakery</b><br>Source: MNS<br>
+Found dead: <b>22/03/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 40)</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>killed by Moroccan refugee who did not want to be deported from prison in Almería (ES)</b><br>Source: GARA<br>
 
 <br>
 
