--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Riaz Omar Faruq (man)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>shot by police near Skopje (MK) after being detained by police at Macedonian-Belgian border</b><br>Source: IRR/MNS<br>
+Found dead: <b>23/07/07</b><br>Number of person: <b>29</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>2 migrants died after boat from Comoros sank in the Indian Ocean near Mayotte Island (FR); 27 missing</b><br>Source: NOB<br>
 
 <br>
 
