--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/07/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hüseyin Dikec (man)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>suicide, at immigration office in Gütersloh (DE), set himself on fire in front of his 5 children out of fear of deportation</b><br>Source: ERB<br>
+Found dead: <b>06/12/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>P. Subramaniyam (woman, 35)</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>died of cold and exhaustion on Czech-German border near Eggersberg (DE)</b><br>Source: VK/SZ/Morgengr./BGS/ZAG<br>
 
 <br>
 
