--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/08/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned, body found with head injuries near Levante beach (ES)</b><br>Source: EFE<br>
+Found dead: <b>31/03/11</b><br>Number of person: <b>70</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Eritrea</b><br>Cause of death: <b>drowned off coast of Tripoli (LY), may include passengers from 2 missing boats</b><br>Source: Quotidiano/LR/Migeurop/Kaosenlared/RAI/PICUM<br>
 
 <br>
 
