--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 15</b><br>Number of person: <b>48</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after rubber boat deflated in the Strait of Sicily; 54 rescued</b><br>Source: Imkander/Independent/BBC<br>
+Found dead: <b>Nov 03</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned in shipwreck near Larache (MA)</b><br>Source: SOS<br>
 
 <br>
 
