--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 27)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>stowaway, suffocated in suitcase stored in trunk of car travelling from Melilla (ES) to Almería (ES)</b><br>Source: BBC/SP/Welt<br>
+Found dead: <b>01/08/17</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N. (3 men; 5 women)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of asphyxiation on dinghy off coast of Libya; 500 survivors</b><br>Source: IOM Italy/Citizen<br>
 
 <br>
 
