--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/10/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Massivi Daniel Lobez (man, 27)</b><br>Region of origin: <b>Angola</b><br>Cause of death: <b>suicide, hanged himself in detention centre in Trier (DE)</b><br>Source: ProAsyl/OL/ZAG<br>
+Found dead: <b>27/11/11</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan, Pakistan</b><br>Cause of death: <b>missing after vessel sank off coast of Brindisi (IT)</b><br>Source: MNS<br>
 
 <br>
 
