--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/03/18</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died in vehicle accident in province of Igdir province (TR) near border with Armenia; 33 survivors</b><br>Source: Reu./LV/IOM<br>
+Found dead: <b>29/09/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 40)</b><br>Region of origin: <b>Slovakia</b><br>Cause of death: <b>suicide, set himself on fire in front of Slovakian embassy in Paris (FR)</b><br>Source: slovensko.com<br>
 
 <br>
 
