--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/10/98</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N. (1 baby; 2 women; 1 man)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>drowned after boat leaving Port of Vlorë (AL) collided then caught fire</b><br>Source: MNS/AFP/ARD/ZDF<br>
+Found dead: <b>23/04/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mokhtar Diallo (man, 25)</b><br>Region of origin: <b>Senegal</b><br>Cause of death: <b>drowned after boat carrying passengers from Kolda region (SN) was shipwrecked off coast of Morocco</b><br>Source: Book:LosInvisiblesDeKolda/MUGAK/ELM/FE<br>
 
 <br>
 
