--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 08</b><br>Number of person: <b>75</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>missing, reportedly drowned while travelling from Libya to Italy on boats with faulty engines</b><br>Source: Mareeg<br>
+Found dead: <b>19/07/07</b><br>Number of person: <b>52</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Ghana, Guinea, Liberia</b><br>Cause of death: <b>drowned in the sea during attempted rescue by Spanish boat 150 miles south of Tenerife (ES)</b><br>Source: GuardianUn./BBC/DS/AP/FR/VK/LR/MNS/EP/Raz<br>
 
 <br>
 
