--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/07/07</b><br>Number of person: <b>52</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Ghana, Guinea, Liberia</b><br>Cause of death: <b>drowned in the sea during attempted rescue by Spanish boat 150 miles south of Tenerife (ES)</b><br>Source: GuardianUn./BBC/DS/AP/FR/VK/LR/MNS/EP/Raz<br>
+Found dead: <b>13/08/07</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N. (8 children; 9 adults)</b><br>Region of origin: <b>Comoros</b><br>Cause of death: <b>drowned after boat sank in the Indian Ocean near Mayotte (FR) after leaving Comoros Islands (KM)</b><br>Source: Le Monde<br>
 
 <br>
 
