--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/06/17</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies recovered in Al Mutred, west of Zawiyah (LY)</b><br>Source: IOM Libya<br>
+Found dead: <b>Dec 00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>stowaway, died of asphyxiation while trying to enter Sweden in trunk of car</b><br>Source: MNS<br>
 
 <br>
 
