--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/07/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 37)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>stabbed to death in camp in Calais (FR) during fight between migrant groups</b><br>Source: AFP/VoixDuNord/Express<br>
+Found dead: <b>27/04/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kwanele Eldah Siziba (woman, 27)</b><br>Region of origin: <b>Zimbabwe</b><br>Cause of death: <b>fell to her death in Islington, London (GB) while fleeing police out of fear of deportation</b><br>Source: IRR/MNS/Voice<br>
 
 <br>
 
