--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/04/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kwanele Eldah Siziba (woman, 27)</b><br>Region of origin: <b>Zimbabwe</b><br>Cause of death: <b>fell to her death in Islington, London (GB) while fleeing police out of fear of deportation</b><br>Source: IRR/MNS/Voice<br>
+Found dead: <b>28/04/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 16)</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>drowned after being thrown overboard by smugglers on boat of 80 migrants as patrol boat approached</b><br>Source: Migreurop/LRP<br>
 
 <br>
 
