--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/07/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Tennekoon</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suffocated in sealed trailer in Györ (HU)</b><br>Source: Reu./AP/DAZ/Budapestsun/ZAG<br>
+Found dead: <b>05/08/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nadir Zarabee (man)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>found hanged in park in Manchester (GB) after being asked to leave his home provided by M&Q Properties Ltd/NASS</b><br>Source: IRR<br>
 
 <br>
 
