--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/02/06</b><br>Number of person: <b>16</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>died of hypothermia, starvation and epilepsy in the Alboran Sea while travelling to Spain</b><br>Source: AFVIC<br>
+Found dead: <b>01/11/12</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 young boy; 1 man, father)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead on coast of Nador (MA) near the Spanish enclave of Melilla (ES)</b><br>Source: AFP<br>
 
 <br>
 
