--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/03/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Noorjahan Begum (woman, 35)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>fell from balcony of her home while fleeing immigration officers (GB)</b><br>Source: NCADC/IRR<br>
+Found dead: <b>21/05/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shurat Tamo (boy, 14)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>suicide, in refugee centre in De Lier (NL) after asylum application was rejected</b><br>Source: PRIME<br>
 
 <br>
 
