--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>3010/16</b><br>Number of person: <b>16</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies decomposed beyond recognition, found washed up on shores of Zuwara (LY)</b><br>Source: LibyanExpress/RedCrescentLibya<br>
+Found dead: <b>16/08/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 36)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>hit by train at entrance to the Peglia tunnel in Ventimiglia (IT)</b><br>Source: ANSA/IOM<br>
 
 <br>
 
