--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/04/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, body recovered near Panagiouda, Lesbos (GR)</b><br>Source: HelCoastG/IOM<br>
+Found dead: <b>29/07/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>stowaway, found suffocated in Coruña (ES)</b><br>Source: Egin<br>
 
 <br>
 
