--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/01/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Salehdeim Fahssahi (man, 38)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>died in arson attack on detention centre in Schrassig (LU)</b><br>Source: Odysseus/PlaZa<br>
+Found dead: <b>10/04/11</b><br>Number of person: <b>59</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Ethiopia, Nigeria, Eritrea</b><br>Cause of death: <b>died of dehydration and starvation near Zliten (LY) after 16 days in the Mediterranean Sea, SOS ignored by NATO</b><br>Source: GuardianUn./MUGAK/ELM/VDG/Raz/ABC/AVUI/VK<br>
 
 <br>
 
