--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/12/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdullah "Joker" Idris (man, 18)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>suicide, asylum seeker facing deportation hanged himself in prison cell in Chelmsford (GB)</b><br>Source: Inquest/IRR<br>
+Found dead: <b>16/03/98</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>disappeared in the Strait of Gibraltar after Moroccan ship sank</b><br>Source: PUB<br>
 
 <br>
 
