--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/07/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 34)</b><br>Region of origin: <b>Dominican Republic</b><br>Cause of death: <b>suicide, hanged himself in prison in Busto Arsizio (IT) after 4 days of detention</b><br>Source: RIS<br>
+Found dead: <b>08/06/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 27)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>suicide, hanged himself in refugee housing facility in Great Britain, police refused to reveal details</b><br>Source: PAIH<br>
 
 <br>
 
