--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bilal (man, 22)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>went missing after leaving village of Bethioua (DZ) and trying to cross the sea to reach Spain</b><br>Source: QUOTI/NOB<br>
+Found dead: <b>17/06/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Samiyou Djimadou (man, 29)</b><br>Region of origin: <b>Benin</b><br>Cause of death: <b>suicide, out of fear of deportation from Brussels (BE) after asylum claim took over 10 months</b><br>Source: MNS/21miles/DH<br>
 
 <br>
 
