--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/02/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ramazan Kaya (man, 26)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>jumped out of window after failing to get a permit to stay in Germany</b><br>Source: taz/ARI<br>
+Found dead: <b>10/10/06</b><br>Number of person: <b>40</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>reportedly drowned after boat sank near Cythera Island (GR)</b><br>Source: KI/MP/PICUM/ABC/FE<br>
 
 <br>
 
