--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>found dead off coast of Cape Trafalgar near Barbate (ES)</b><br>Source: IOM<br>
+Found dead: <b>16/03/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ibrahima Sey (man, 29)</b><br>Region of origin: <b>Gambia</b><br>Cause of death: <b>died after being teargassed while handcuffed at police station in London (GB)</b><br>Source: MNS/NCRM<br>
 
 <br>
 
