--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/03/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ibrahima Sey (man, 29)</b><br>Region of origin: <b>Gambia</b><br>Cause of death: <b>died after being teargassed while handcuffed at police station in London (GB)</b><br>Source: MNS/NCRM<br>
+Found dead: <b>09/03/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>stowaway, drowned in Le Havre (FR) after being sent back by French police</b><br>Source: Libération<br>
 
 <br>
 
